# piker

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  Pipfile  README.md  README.rst  default.nix  develop.nix  flake.nix  notes_to_self.rst  piker.ipynb  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: brokers.toml  conf.toml
data/: brokers.toml
dockering/elastic/: Dockerfile  elasticsearch.yaml  elasticsearch.yml
dockering/ib/: docker-compose.yml  fork_ports_delayed.sh  ibc.ini  jts.ini  jts_live.ini  run_x11_vnc.sh
docs/: tina_readme.rst
examples/: basic_order_bot.py
infra/ib/: README.rst  docker-compose.yml  ibc.ini  jts.ini
infra/piker/: Dockerfile
piker/: __init__.py  _async_utils.py  _cacheables.py  _daemon.py  _ems.py  _profile.py  calc.py  cli.py  config.py  fsp.py  log.py  pp.py  trionics.py  types.py  watchlists.py
piker/accounting/: README.rst  __init__.py  _allocate.py  _ledger.py  _mktinfo.py  _pos.py  _toml.py  calc.py  cli.py
piker/broker/: README.rst
piker/brokers/: README.rst  __init__.py  _daemon.py  _util.py  api.py  binance.py  cli.py  config.py  core.py  data.py  deribit.py  ib.py  kraken.py  kucoin.py  questrade.py  robinhood.py
piker/brokers/binance/: __init__.py  api.py  broker.py  feed.py  schemas.py  venues.py
piker/brokers/deribit/: README.rst  __init__.py  api.py  feed.py
piker/brokers/ib/: README.rst  __init__.py  _flex_reports.py  _util.py  api.py  broker.py  client.py  feed.py  ledger.py  symbols.py
piker/brokers/kraken/: README.rst  __init__.py  api.py  broker.py  feed.py  ledger.py  symbols.py
piker/clearing/: __init__.py  _allocate.py  _client.py  _ems.py  _messages.py  _paper_engine.py  _util.py
piker/cli/: __init__.py
piker/data/: __init__.py  _ahab.py  _buffer.py  _compression.py  _flumes.py  _formatters.py  _m4.py  _max_pain_daemon.py  _normalize.py  _pathops.py  _sampling.py  _sharedmem.py  _source.py  _symcache.py  _timeseries.py  _util.py  _web_bs.py  cli.py  cryptofeeds.py  elastic.py  elasticsearch.py  feed.py  flows.py  history.py  ingest.py  marketstore.py  tectonicdb.py  ticktools.py  tsp.py  types.py  validate.py
piker/exchange/: __init__.py  _client.py  _ems.py  _paper_engine.py
piker/fsp/: __init__.py  _api.py  _engine.py  _momo.py  _volume.py
piker/service/: __init__.py  _actor_runtime.py  _ahab.py  _daemon.py  _mngr.py  _multiaddr.py  _registry.py  _util.py  elastic.py  marketstore.py
piker/storage/: __init__.py  cli.py  marketstore.py  nativedb.py
piker/storage/marketstore/: __init__.py  _ingest.py
piker/testing/: __init__.py  _quote_streamer.py  quotes.json
piker/toolz/: __init__.py  debug.py
piker/tsp/: __init__.py  _anal.py
piker/ui/: __init__.py  _anchors.py  _annotate.py  _app.py  _axes.py  _chart.py  _compression.py  _cursor.py  _curve.py  _dataviz.py  _display.py  _editors.py  _event.py  _exec.py  _feedstatus.py  _flows.py  _forms.py  _fsp.py  _graphics.py  _icons.py  _interaction.py  _l1.py  _label.py  _lines.py  _notify.py  _ohlc.py  _orm.py  _overlay.py  _pathops.py  _pg_overrides.py  _position.py  _remote_ctl.py  _render.py  _search.py  _signalling.py  _source.py  _style.py  _text_entry.py  _window.py  cli.py  (+8 more)
piker/ui/_graphics/: __init__.py  _cursor.py  _curve.py  _lines.py  _ohlc.py
piker/ui/kivy/: __init__.py  hoverable.py  monitor.py  mouse_over.py  option_chain.py  pager.py  tabular.py  utils_async.py
piker/ui/qt/: __init__.py  _axes.py  _chart.py  _exec.py  _graphics.py  _source.py  _style.py  stackof_candle.py
piker/ui/qt/quantdom/: base.py  charts.py  loaders.py  portfolio.py
piker/ui/quantdom/: __init__.py  _equity.py  base.py  charts.py  loaders.py  utils.py
piker/watchlists/: __init__.py  cli.py
scripts/: ib_data_reset.py  mtr.py
snippets/: ib_data_reset.py  qt_screen_info.py
tests/: conftest.py  test_accounting.py  test_brokers.py  test_cli.py  test_configs.py  test_databases.py  test_deribit.py  test_docker_services.py  test_ems.py  test_feeds.py  test_paper.py  test_questrade.py  test_services.py  test_tractor.py  test_watchlists.py
tests/_inputs/: trades_binance_paper.toml
